fix: fix button and categories padding

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </svg>
 
   <!-- Main -->
-  <main class="w-full h-auto rounded-8 overflow-hidden sm:w-528 sm:mx-auto lg:w-920 lg:flex lg:flex-row" id="main">
+  <main class="w-full h-auto rounded-8 overflow-hidden sm:w-327 sm:mx-auto lg:w-920 lg:flex lg:flex-row" id="main">
     <h1 class="sr-only">3 column preview card component</h1>
   </main>
 
@@ -65,7 +65,7 @@
     </svg>
     <h2 class="font-heading font-700 text-40 text-very-light-gray uppercase mb-32" data-name="title"></h2>
     <p class="font-body font-400 text-15 text-transparent-white mb-24 lg:mb-84" data-name="description"></p>
-    <button class="w-146 h-48 rounded-full bg-very-light-gray font-body font-400 text-15 border-2 border-transparent hover:bg-transparent hover:border-very-light-gray hover:text-very-light-gray" data-name="button">Learn more</button>
+    <button class="w-auto min-h-48 px-28 rounded-full bg-very-light-gray font-body font-400 text-15-button border-2 border-transparent hover:bg-transparent hover:border-very-light-gray hover:text-very-light-gray" data-name="button">Learn more</button>
   </template>
 
   <!-- Module -->
