--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta property="twitter:image" content="https://john-mirage.github.io/3-column-preview-card-component/preview.jpg">
 </head>
 
-<body class="px-24 py-88 bg-very-light-gray lg:pt-172">
+<body class="px-24 py-88 bg-very-light-gray md:pt-172">
 
   <!-- Icons -->
   <svg class="hidden" xmlns="http://www.w3.org/2000/svg">
@@ -54,7 +54,7 @@
   </svg>
 
   <!-- Main -->
-  <main class="w-full h-auto rounded-8 overflow-hidden sm:w-327 sm:mx-auto lg:w-920 lg:flex lg:flex-row" id="main">
+  <main class="w-full h-auto rounded-8 overflow-hidden sm:w-327 sm:mx-auto md:w-720 md:flex md:flex-row lg:w-920" id="main">
     <h1 class="sr-only">3 column preview card component</h1>
   </main>
 
@@ -64,7 +64,7 @@
       <use data-name="shape"></use>
     </svg>
     <h2 class="font-heading font-700 text-40 text-very-light-gray uppercase mb-32" data-name="title"></h2>
-    <p class="font-body font-400 text-15 text-transparent-white mb-24 lg:mb-84" data-name="description"></p>
+    <p class="w-full font-body font-400 text-15 text-transparent-white mb-24 md:mb-84" data-name="description"></p>
     <button class="w-auto min-h-48 px-28 rounded-full bg-very-light-gray font-body font-400 text-15-button border-2 border-transparent hover:bg-transparent hover:border-very-light-gray hover:text-very-light-gray" data-name="button">Learn more</button>
   </template>
 
