--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <use data-name="shape"></use>
     </svg>
     <h2 class="font-heading font-700 text-40 text-very-light-gray uppercase mb-32" data-name="title"></h2>
-    <p class="w-full font-body font-400 text-15 text-transparent-white mb-24 md:mb-84" data-name="description"></p>
+    <p class="w-full font-body font-400 text-15 text-transparent-white mb-24 md:mb-48 lg:mb-84" data-name="description"></p>
     <button class="w-auto min-h-48 px-28 rounded-full bg-very-light-gray font-body font-400 text-15-button border-2 border-transparent hover:bg-transparent hover:border-very-light-gray hover:text-very-light-gray" data-name="button">Learn more</button>
   </template>
 
