fix: add noscript tag if javascript is not available

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
     <button class="w-auto min-h-48 px-28 rounded-full bg-very-light-gray font-body font-400 text-15-button border-2 border-transparent hover:bg-transparent hover:border-very-light-gray hover:text-very-light-gray" data-name="button">Learn more</button>
   </template>
 
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+
   <!-- Module -->
   <script type="module" src="/src/main.ts"></script>
 </body>
